Fix UI overlaps and finalize professional icons

--- a/face-assistant.css
+++ b/face-assistant.css
@@ -2,7 +2,7 @@
 
 #face-assistant-btn {
     position: fixed;
-    top: 30px;
+    top: 100px;
     left: 30px;
     width: 56px;
     height: 56px;
