--- a/voice-nav.css
+++ b/voice-nav.css
@@ -3,7 +3,7 @@
 /* Microphone Button */
 #voice-nav-btn {
     position: fixed;
-    top: 30px;
+    top: 100px;
     right: 30px;
     width: 56px;
     height: 56px;
